ARA-72 #comment Banner Styling completed and about section alignment issue corrected

--- a/wp-content/themes/aviation/scss/_header.scss
+++ b/wp-content/themes/aviation/scss/_header.scss
@@ -1,11 +1,23 @@
 @import "alvfonts";
-
 header.site-header {
-    padding-top: 20px !important;
-    padding-bottom: 20px !important;
-    background-color: #414190;
+    padding: 60px 0 20px 0 !important;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
     max-width: 1290px;
     margin: 0 auto;
+    z-index: 999;
+    &.openMenu {
+        background-color: #001658;
+        box-shadow: 2px 2px 15px -2px #d7d7d76b;
+    }
+    @media all and (max-width: 1300px) {
+        padding: 60px 20px 20px !important;
+    }
+    @media all and (max-width: 909px) {
+        padding: 40px 40px 20px !important;
+    }
     .site-header-main {
         .site-branding {
             a {
@@ -17,6 +29,7 @@ header.site-header {
             background: url(../images/menu.png) no-repeat center;
             border: none;
             width: 34px;
+            height: 34px;
             &:hover,
             &:focus {
                 background-color: transparent;
@@ -73,6 +86,21 @@ header.site-header {
                     }
                 }
             }
+            ul.social-links-menu {
+                li {
+                    float: right;
+                    a {
+                        border: none;
+                        color: #fff;
+                        &:hover {
+                            text-decoration: none;
+                        }
+                        &:before {
+                            font-size: 22px;
+                        }
+                    }
+                }
+            }
         }
     }
     &.fixed {
@@ -84,13 +112,14 @@ header.site-header {
         max-width: none;
         width: 100%;
         animation: smoothScroll 1s forwards;
-        z-index: 99999;
+        z-index: 999;
         padding-top: 10px !important;
         padding-bottom: 10px !important;
+        background-color: #0b2758;
         .site-header-main {
             max-width: 1290px;
             margin: 0 auto;
-            padding:0 4.5455%;
+            //padding: 0 4.5455%;
         }
     }
 }
@@ -101,5 +130,176 @@ header.site-header {
     }
     100% {
         transform: translateY(0px);
+    }
+}
+
+//styling for banner
+.banner-wrapper {
+    .banner-content {
+        overflow: hidden;
+        display: flex;
+        position: relative;
+        height: 90vh;
+        &:after {
+            content: "";
+            position: absolute;
+            top: 0;
+            left: 0;
+            display: block;
+            width: 100%;
+            height: 100%;
+            background-color: #0b275845;
+        }
+        .social-links {
+            position: absolute;
+            top: 36%;
+            left: 30px;
+            z-index: 990;
+            @media all and (max-width: 909px) {
+                display: none;
+            }
+            span.sl-text {
+                color: white;
+                display: block;
+                margin-top: 50px;
+                position: relative;
+                left: -26px;
+                font-family: SourceSans-Semib;
+                font-size: 22px;
+                transform: rotate(-90deg);
+            }
+            span.sl-line {
+                position: relative;
+                display: block;
+                width: 2px;
+                height: 30px;
+                background-color: white;
+                left: 14px;
+                margin-top: 25px;
+            }
+            nav.social-navigation {
+                ul.social-links-menu {
+                    display: flex;
+                    flex-direction: column-reverse;
+                    li {
+                        a {
+                            border: none;
+                            font-size: 20px;
+                            &:before {
+                                color: white;
+                                font-size: 30px;
+                            }
+                            &:hover,
+                            &:focus,
+                            &:active {
+                                text-decoration: none;
+                            }
+                        }
+                    }
+                }
+            }
+        }
+        .banner-left {
+            @media all and (max-width: 1024px) {
+                width: 100%;
+            }
+            img {
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
+            }
+        }
+        .banner-right {
+            flex-grow: 2;
+            position: relative;
+            @media all and (max-width: 1024px) {
+                display: none;
+            }
+            &:before {
+                content: "";
+                display: block;
+                position: absolute;
+                width: 30px;
+                height: 100%;
+                background-color: #0b2758;
+                opacity: .8;
+            }
+            video {
+                height: 100%;
+                width: 100%;
+                object-fit: fill;
+            }
+        }
+        .banner-text-container {
+            position: absolute;
+            top: 30%;
+            z-index: 990;
+            color: #fff;
+            left: 12%;
+            padding-right: 20px;
+            @media all and (max-width: 909px) {
+                left: auto;
+                padding-right: 40px;
+                padding-left: 40px;
+            }
+            @media all and (max-width: 450px) {
+                top: 25%;
+                padding-right: 20px;
+                padding-left: 20px;
+            }
+            .banner-title {
+                max-width: 660px;
+                margin-bottom: 20px;
+                h2 {
+                    font-family: SourceSans-Bl;
+                    font-size: 50px;
+                    @media all and (max-width: 1200px) {
+                        font-size: 40px;
+                    }
+                    @media all and (max-width: 768px) {
+                        font-size: 30px;
+                    }
+                }
+            }
+            .banner-subtitle {
+                margin-bottom: 50px;
+                @media all and (max-width: 450px) {
+                    margin-bottom: 30px;
+                }
+                p {
+                    font-family: SourceSans-Bd;
+                    font-size: 23px;
+                    margin-bottom: 0px;
+                    @media all and (max-width: 1200px) {
+                        font-size: 20px;
+                    }
+                    @media all and (max-width: 768px) {
+                        font-size: 15px;
+                    }
+                }
+            }
+            .banner-btn {
+                a {
+                    button {
+                        // width: 245px;
+                        // height: 60px;
+                        padding: 20px 75px;
+                        font-size: 19px;
+                        font-family: SourceSans-Lt;
+                        text-transform: none;
+                        color: #001658;
+                        background-color: white;
+                        border-radius: 5px;
+                        @media all and (max-width: 1200px) {
+                            padding: 10px 50px;
+                        }
+                        @media all and (max-width: 768px) {
+                            padding: 7px 40px;
+                            font-size: 16px;
+                        }
+                    }
+                }
+            }
+        }
     }
 }
