--- a/wp-content/themes/aviation/scss/custom.scss
+++ b/wp-content/themes/aviation/scss/custom.scss
@@ -18,7 +18,7 @@ body:not(.custom-background-image):before, body:not(.custom-background-image):af
   padding: 0;
   max-width: 100%;
   margin: 0 auto;
-  border: solid red;
+  //border: solid red;
   .content-area {
     width: 100%;
   }
